// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`to display sending... when message is still in optimistic state 1`] = `
<div
  className="message messageHeader"
  data-message-id="messageThread12_1"
>
  <div
    className="avatar"
  >
    <Avatar
      avatarUrl="http://avatar.com/i.png"
      url="/m/1"
    />
  </div>
  <div
    className="content"
  >
    <div>
      <span
        className="name username-cards"
      >
        Good Person
      </span>
      <span
        className="date timestamp"
      >
        sending...
      </span>
    </div>
    <div
      className="text bdy-drk-sm"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "test",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`to match the latest non-header snapshot 1`] = `
<div
  className="message"
  data-message-id="1"
>
  <div
    className="avatar"
  />
  <div
    className="content"
  >
    <div
      className="text bdy-drk-sm"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "test",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`to match the latest snapshot 1`] = `
<div
  className="message messageHeader"
  data-message-id="1"
>
  <div
    className="avatar"
  >
    <Avatar
      avatarUrl="http://avatar.com/i.png"
      url="/m/1"
    />
  </div>
  <div
    className="content"
  >
    <div>
      <span
        className="name username-cards"
      >
        Good Person
      </span>
      <span
        className="date timestamp"
      />
    </div>
    <div
      className="text bdy-drk-sm"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "test",
          }
        }
      />
    </div>
  </div>
</div>
`;
